Attempts to fix the layout issue unsuccessfully.

--- a/client/stylesheets/grid.css
+++ b/client/stylesheets/grid.css
@@ -67,7 +67,7 @@
 .column-12 {
     width: 100%;
 }
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 850px) {
     .column-1,
     .column-2,
     .column-3,
